# blog

./: .env  .env.example  Cargo.toml
migrations/: 1_setup.sql  2_user.sql  3_article.sql
src/: auth.rs  config.rs  error.rs  extractor.rs  lib.rs  main.rs  server.rs  utils.rs
src/db/: articles.rs  comments.rs  mod.rs  user.rs
src/handlers/: articles.rs  index.rs  mod.rs  user.rs
src/models/: articles.rs  comments.rs  mod.rs  users.rs
static/assets/js/: highlight.min.js
templates/: article.html  articles.html  base.html  index.html  login.html  new_article.html  user.html
